2005-09-07  Erik Hjortsberg  <erik@katastrof.nu>

	*  src/components/ogre/environment/Sun.*
		* added methods and signals for changing the position of the sun, the colour of the sun and the ambient lightning
		* added console commands for changing the position of the sun, the colour of the sun and the ambient lightning, these are "/setsunposition x y z", "/setsuncolour r b g" and "/setambientlight r b g"

2005-09-07  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainShader.cpp: enable vertex lightning and disable self illumination on the terrain, which allows the ambient light and the sun to better decide the look of the terrain

2005-09-07  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: added setting for how much the alpha map should be scaled

2005-09-07  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/TerrainPage.*
		* get the alpha map scaling from the config file
		* for simple splatting, use 8 bit bitmaps instead of 32 bit; this should bring the memory usage down a bit
		* enable vertex lightning for the terrain. Not sure if this is the right way though, perhaps we should rather use lightmaps.

2005-09-06  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/widgets/ChatWidget.cpp, src/components/widgets/ConsoleWidget.cpp, src/components/widgets/DebugWidget.cpp, src/components/widgets/EntityPickerWidget.cpp, src/components/widgets/GiveWidget.cpp, src/components/widgets/IconBase.h, src/components/widgets/IngameChatWidget.cpp, src/components/widgets/InspectWidget.*, src/components/widgets/InventoryWidget.cpp, src/components/widgets/JesusEdit.cpp, src/components/widgets/MakeEntityWidget.cpp, src/components/widgets/Performance.cpp, src/components/widgets/Quit.cpp, src/components/widgets/ServerBrowserWidget.cpp, src/components/widgets/ServerWidget.cpp
		* use new utility methods in Widget.cpp which cleans up the code a bit
		* added some more comments

2005-09-06  Erik Hjortsberg  <erik@katastrof.nu>
